# DECODE_Cloud_JobFetcher

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  test.sh
.github/workflows/: code-checks.yaml  publish-version-ecr.yaml  publish-version.yaml
cli/: main.py
decode_job_fetcher/: __init__.py  models.py
decode_job_fetcher/api/: __init__.py  model.py  token.py  worker.py
decode_job_fetcher/info/: sys.py
decode_job_fetcher/io/: files.py
decode_job_fetcher/status/: __init__.py  pinger.py  status.py
fetcher/: __init__.py  __init__.pyi  main.py  models.pyi  py.typed  session.py  session.pyi
fetcher/api/: __init__.py  builder.py  builder.pyi  model.py  model.pyi  token.py  token.pyi  worker.py  worker.pyi
fetcher/docker/: __init__.py  manager.py  manager.pyi
fetcher/info/: __init__.pyi  sys.py  sys.pyi
fetcher/io/: __init__.pyi  files.py  files.pyi
fetcher/status/: __init__.py  ping.py  pinger.py  pinger.pyi  status.py  status.pyi
mock_api/: environment.yml
mock_api/app/: app.py  main.py
mock_decode/: Dockerfile
mock_decode/app/: main.py
scripts/: docker.py  setup.sh
test/unit/api/: test_builder.py  test_worker.py
test/unit/info/: test_sys.py
test/unit/inout/: test_files.py
test/unit/io/: test_upload.py
test/unit/status/: test_status.py
tests/integration/: conftest.py  test_mockapi.py
tests/integration/io/: test_files_.py
tests/unit/: test_cleanup.py  test_package.py
tests/unit/api/: test_builder.py  test_worker.py
tests/unit/info/: test_sys.py
tests/unit/io/: test_files.py
(+2 files in other folders)
